# attendance-api

./: .env  Cargo.toml  README.md
src/: auth.rs  db.rs  main.rs  middleware.rs  models.rs  routes.rs  schema.rs
src/db/: crud.rs  mod.rs
src/http/: auth.rs  middleware.rs  mod.rs  routes.rs
