[package]
name = "attendance-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = {version = "0.5.0-rc.1", features = ["json"]}
rocket_cors = "0.6.0"
serde = {version = "1.0", features = ["derive"]}
tokio = {version = "1.0", features = ["full"]}
sqlx = {version = "0.7.3", features = ["postgres", "runtime-tokio-rustls"]}
dotenv = "0.15.0"
jsonwebtoken = "9.2.0"
chrono = "0.4.33"
